Better single mesh multicluster support - works with upstream and bzc images as well

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,6 +12,7 @@ WORKDIR /go/src/${PACKAGE}
 
 COPY pkg/    pkg/
 COPY cmd/    cmd/
+COPY vendor/ vendor/
 COPY Makefile Gopkg.* /go/src/${PACKAGE}/
 RUN make vendor
 
