--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -108,6 +108,9 @@ spec:
                   type: object
                 resources:
                   type: object
+                sdsEnabled:
+                  description: Whether SDS is enabled.
+                  type: boolean
                 tolerations:
                   items:
                     type: object
