fix CNI support - rbac permissions - daemonset env variables - sidecar injector template

--- a/config/base/rbac/rbac_role.yaml
+++ b/config/base/rbac/rbac_role.yaml
@@ -24,6 +24,8 @@ rules:
   resources:
   - serviceaccounts
   - configmaps
+  - pods
+  - events
   verbs:
   - get
   - list
@@ -41,13 +43,6 @@ rules:
   - list
   - watch
   - update
-  - patch
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
   - patch
 - apiGroups:
   - ""
