--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -44,6 +44,8 @@ rules:
   resources:
   - serviceaccounts
   - configmaps
+  - pods
+  - events
   verbs:
   - get
   - list
@@ -61,13 +63,6 @@ rules:
   - list
   - watch
   - update
-  - patch
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
   - patch
 - apiGroups:
   - ""
