Add GatewayType enum validation to CRD

--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -114,6 +114,9 @@ spec:
                 type: object
               type: array
             type:
+              enum:
+              - ingress
+              - egress
               type: string
           required:
           - ports
