Add CRD validation to replica counts

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -213,6 +213,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
@@ -242,9 +243,11 @@ spec:
                       type: string
                     maxReplicas:
                       format: int32
+                      minimum: 0
                       type: integer
                     minReplicas:
                       format: int32
+                      minimum: 0
                       type: integer
                     nodeSelector:
                       type: object
@@ -256,6 +259,7 @@ spec:
                       type: array
                     replicaCount:
                       format: int32
+                      minimum: 0
                       type: integer
                     requestedNetworkView:
                       type: string
@@ -305,9 +309,11 @@ spec:
                       type: string
                     maxReplicas:
                       format: int32
+                      minimum: 0
                       type: integer
                     minReplicas:
                       format: int32
+                      minimum: 0
                       type: integer
                     nodeSelector:
                       type: object
@@ -319,6 +325,7 @@ spec:
                       type: array
                     replicaCount:
                       format: int32
+                      minimum: 0
                       type: integer
                     requestedNetworkView:
                       type: string
@@ -378,6 +385,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
@@ -499,9 +507,11 @@ spec:
                   type: string
                 maxReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 minReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 multiClusterSupport:
                   description: Turn it on if you use mixer that supports multi cluster
@@ -513,6 +523,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 reportBatchMaxEntries:
                   description: Set reportBatchMaxEntries to 0 to use the default batching
@@ -638,9 +649,11 @@ spec:
                   type: string
                 maxReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 minReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 nodeSelector:
                   type: object
@@ -648,6 +661,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
@@ -680,9 +694,11 @@ spec:
                   type: string
                 maxReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 minReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 nodeSelector:
                   type: object
@@ -690,6 +706,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
@@ -1041,6 +1058,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
@@ -1071,9 +1089,11 @@ spec:
                   type: string
                 maxReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 minReplicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 nodeSelector:
                   type: object
@@ -1081,6 +1101,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 reportBatchMaxEntries:
                   description: Set reportBatchMaxEntries to 0 to use the default batching
