--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -70,9 +70,11 @@ spec:
               type: string
             maxReplicas:
               format: int32
+              minimum: 0
               type: integer
             minReplicas:
               format: int32
+              minimum: 0
               type: integer
             nodeSelector:
               type: object
@@ -85,6 +87,7 @@ spec:
               type: array
             replicaCount:
               format: int32
+              minimum: 0
               type: integer
             requestedNetworkView:
               type: string
