--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -456,6 +456,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
