--- a/deploy/charts/istio-operator/templates/operator-remoteistio-1.5-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-remoteistio-1.5-crd.yaml
@@ -462,6 +462,7 @@ spec:
                   type: object
                 replicaCount:
                   format: int32
+                  minimum: 0
                   type: integer
                 resources:
                   type: object
