--- a/config/samples/istio_v1beta1_istio_cni_gke.yaml
+++ b/config/samples/istio_v1beta1_istio_cni_gke.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.5.2"
+  version: "1.6.0-beta.1"
   meshPolicy:
     mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
