--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -93,6 +93,9 @@ spec:
               type: string
             resources:
               type: object
+            runAsRoot:
+              description: Whether to run the gateway in a privileged container
+              type: boolean
             sds:
               properties:
                 enabled:
