--- a/config/samples/istio_v1beta1_meshgateway.yaml
+++ b/config/samples/istio_v1beta1_meshgateway.yaml
@@ -14,13 +14,14 @@ spec:
   serviceAnnotations: {}
   serviceLabels: {}
   ports:
-    - port: 15020
-      targetPort: 15020
+    - port: 15021
+      targetPort: 15021
       name: status-port
     - port: 80
-      targetPort: 80
+      targetPort: 8080
       name: http2
     - port: 443
+      targetPort: 8443
       name: https
     - port: 15443
       targetPort: 15443
@@ -40,3 +41,4 @@ spec:
     limits:
       cpu: 2000m
       memory: 1024Mi
+  runAsRoot: true
