--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -1234,7 +1234,7 @@ spec:
               type: string
             trustDomainAliases:
               description: ' The trust domain aliases represent the aliases of trust_domain.  For
-                example, if we have  trustDomain: td1  trustDomainAliases: [“td2”,
+                example, if we have  trustDomain: td1  trustDomainAliases: ["td2",
                 "td3"]  Any service with the identity "td1/ns/foo/sa/a-service-account",
                 "td2/ns/foo/sa/a-service-account",  or "td3/ns/foo/sa/a-service-account"
                 will be treated the same in the Istio mesh.'
