--- a/config/samples/istio_v1beta1_istio_nodeaffinities.yaml
+++ b/config/samples/istio_v1beta1_istio_nodeaffinities.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.6.0-beta.1"
+  version: "1.6.0-rc.0"
   meshPolicy:
     mtlsMode: PERMISSIVE
   includeIPRanges: "*"
@@ -17,7 +17,7 @@ spec:
     enabled: false
   pilot:
     enabled: true
-    image: "docker.io/istio/pilot:1.6.0-beta.1"
+    image: "docker.io/istio/pilot:1.6.0-rc.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
@@ -31,10 +31,10 @@ spec:
       tolerationSeconds: 6000
   citadel:
     enabled: true
-    image: "docker.io/istio/citadel:1.6.0-beta.1"
+    image: "docker.io/istio/citadel:1.6.0-rc.0"
   galley:
     enabled: true
-    image: "docker.io/istio/galley:1.6.0-beta.1"
+    image: "docker.io/istio/galley:1.6.0-rc.0"
     replicaCount: 1
   gateways:
     enabled: true
@@ -93,30 +93,30 @@ spec:
       enabled: false
   policy:
     enabled: true
-    image: "docker.io/istio/mixer:1.6.0-beta.1"
+    image: "docker.io/istio/mixer:1.6.0-rc.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   telemetry:
     enabled: true
-    image: "docker.io/istio/mixer:1.6.0-beta.1"
+    image: "docker.io/istio/mixer:1.6.0-rc.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   sidecarInjector:
     enabled: true
-    image: "docker.io/istio/sidecar_injector:1.6.0-beta.1"
+    image: "docker.io/istio/sidecar_injector:1.6.0-rc.0"
     replicaCount: 1
     rewriteAppHTTPProbe: true
     autoInjectionPolicyEnabled: true
   nodeAgent:
     enabled: false
-    image: "docker.io/istio/node-agent-k8s:1.6.0-beta.1"
+    image: "docker.io/istio/node-agent-k8s:1.6.0-rc.0"
   proxy:
-    image: "docker.io/istio/proxyv2:1.6.0-beta.1"
+    image: "docker.io/istio/proxyv2:1.6.0-rc.0"
     enableCoreDump: false
   proxyInit:
-    image: "docker.io/istio/proxyv2:1.6.0-beta.1"
+    image: "docker.io/istio/proxyv2:1.6.0-rc.0"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
