Move from MeshPolicy to PeerAuthentication CR

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -477,7 +477,8 @@ spec:
                 required to be globally/universally unique.
               type: string
             meshPolicy:
-              description: MeshPolicy configures the default MeshPolicy resource
+              description: MeshPolicy configures the mesh-wide PeerAuthentication
+                resource
               properties:
                 mtlsMode:
                   description: MTLSMode sets the mesh-wide mTLS policy
