Consolidate sample CRs to istiod model

--- a/config/samples/istio_v1beta1_istio_meshexpansion.yaml
+++ b/config/samples/istio_v1beta1_istio_meshexpansion.yaml
@@ -13,3 +13,6 @@ spec:
     mtlsMode: STRICT
   meshExpansion: true
   controlPlaneSecurityEnabled: true
+  proxy:
+    image: "docker.io/istio/proxyv2:1.6.0-rc.2"
+  jwtPolicy: "first-party-jwt"
