--- a/config/samples/istio_v1beta1_istio_multimesh.yaml
+++ b/config/samples/istio_v1beta1_istio_multimesh.yaml
@@ -17,3 +17,6 @@ spec:
     enabled: true
   citadel:
     caSecretName: "cacerts"
+  proxy:
+    image: "docker.io/istio/proxyv2:1.6.0-rc.2"
+  jwtPolicy: "first-party-jwt"
