--- a/config/samples/istio_v1beta1_istio_cni.yaml
+++ b/config/samples/istio_v1beta1_istio_cni.yaml
@@ -11,7 +11,6 @@ spec:
   autoInjectionNamespaces:
   - "default"
   sidecarInjector:
-    enabled: true
     initCNIConfiguration:
       enabled: true
       chained: true
@@ -24,3 +23,6 @@ spec:
         initContainerName: "istio-validation"
         brokenPodLabelKey: "cni.istio.io/uninitialized"
         brokenPodLabelValue: "true"
+  proxy:
+    image: "docker.io/istio/proxyv2:1.6.0-rc.2"
+  jwtPolicy: "first-party-jwt"
