add create-only support for Istio CR managed ingress/egress

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -234,6 +234,10 @@ spec:
                       type: array
                     affinity:
                       type: object
+                    createOnly:
+                      description: Whether to fully reconcile the MGW resource or
+                        just take care that it exists
+                      type: boolean
                     enabled:
                       type: boolean
                     labels:
@@ -303,6 +307,10 @@ spec:
                       type: array
                     affinity:
                       type: object
+                    createOnly:
+                      description: Whether to fully reconcile the MGW resource or
+                        just take care that it exists
+                      type: boolean
                     enabled:
                       type: boolean
                     labels:
