--- a/config/samples/istio_v1beta1_istio_cni.yaml
+++ b/config/samples/istio_v1beta1_istio_cni.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.6.0-rc.2"
+  version: "1.6.0"
   meshPolicy:
     mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
@@ -24,5 +24,5 @@ spec:
         brokenPodLabelKey: "cni.istio.io/uninitialized"
         brokenPodLabelValue: "true"
   proxy:
-    image: "docker.io/istio/proxyv2:1.6.0-rc.2"
+    image: "docker.io/istio/proxyv2:1.6.0"
   jwtPolicy: "first-party-jwt"
