--- a/config/samples/istio_v1beta1_istio_multimesh.yaml
+++ b/config/samples/istio_v1beta1_istio_multimesh.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: multimesh
 spec:
-  version: "1.6.0-rc.2"
+  version: "1.6.0"
   autoInjectionNamespaces:
   - "default"
   useMCP: false
@@ -18,5 +18,5 @@ spec:
   citadel:
     caSecretName: "cacerts"
   proxy:
-    image: "docker.io/istio/proxyv2:1.6.0-rc.2"
+    image: "docker.io/istio/proxyv2:1.6.0"
   jwtPolicy: "first-party-jwt"
