add custom ServicePort struct to allow numeric target port only

--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -82,6 +82,35 @@ spec:
               type: object
             ports:
               items:
+                properties:
+                  name:
+                    description: The name of this port within the service. This must
+                      be a DNS_LABEL. All ports within a ServiceSpec must have unique
+                      names. This maps to the 'Name' field in EndpointPort objects.
+                      Optional if only one ServicePort is defined on this service.
+                    type: string
+                  nodePort:
+                    description: 'The port on each node on which this service is exposed
+                      when type=NodePort or LoadBalancer. Usually assigned by the
+                      system. If specified, it will be allocated to the service if
+                      unused or else creation of the service will fail. Default is
+                      to auto-allocate a port if the ServiceType of this Service requires
+                      one. More info: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport'
+                    format: int32
+                    type: integer
+                  port:
+                    description: The port that will be exposed by this service.
+                    format: int32
+                    type: integer
+                  protocol:
+                    description: The IP protocol for this port. Supports "TCP", "UDP",
+                      and "SCTP". Default is TCP.
+                    type: string
+                  targetPort:
+                    format: int32
+                    type: integer
+                required:
+                - port
                 type: object
               minItems: 1
               type: array
