Run gateways as root by default

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -46,7 +46,7 @@ spec:
       loadBalancerIP: ""
       serviceAnnotations: {}
       serviceLabels: {}
-      runAsRoot: false
+      runAsRoot: true
       ports:
         - port: 15021
           targetPort: 15021
@@ -75,7 +75,7 @@ spec:
       serviceType: "ClusterIP"
       serviceAnnotations: {}
       serviceLabels: {}
-      runAsRoot: false
+      runAsRoot: true
       ports:
         - port: 80
           targetPort: 8080
