--- a/config/samples/istio_v1beta1_meshgateway.yaml
+++ b/config/samples/istio_v1beta1_meshgateway.yaml
@@ -13,7 +13,7 @@ spec:
   loadBalancerIP: ""
   serviceAnnotations: {}
   serviceLabels: {}
-  runAsRoot: false
+  runAsRoot: true
   ports:
     - port: 15021
       targetPort: 15021
