--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -80,3 +80,7 @@ version="v1.4.7"
 [[constraint]]
   name = "github.com/mholt/caddy"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.6.0"
