--- a/config/overlays/psp/kustomization.yaml
+++ b/config/overlays/psp/kustomization.yaml
@@ -6,6 +6,6 @@ namespace: istio-system
 namePrefix: istio-operator-
 
 resources:
-- resources/psp.yaml
+- resources/psp_restricted.yaml
 - resources/psp_role.yaml
 - resources/psp_role_binding.yaml
