--- a/deploy/charts/istio-operator/templates/operator-psp-restricted.yaml
+++ b/deploy/charts/istio-operator/templates/operator-psp-restricted.yaml
@@ -2,7 +2,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ include "istio-operator.fullname" . }}-basic
+  name: {{ include "istio-operator.fullname" . }}-restricted
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -11,23 +11,42 @@ metadata:
     app.kubernetes.io/version: {{ .Chart.AppVersion }}
     app.kubernetes.io/component: operator
 spec:
+  allowPrivilegeEscalation: false
+  forbiddenSysctls:
+  - '*'
   fsGroup:
-    rule: RunAsAny
+    ranges:
+    - max: 65535
+      min: 1
+    rule: MustRunAs
+  requiredDropCapabilities:
+  - ALL
   runAsUser:
-    rule: RunAsAny
+    rule: MustRunAsNonRoot
+  runAsGroup:
+    rule: MustRunAs
+    ranges:
+    - min: 1
+      max: 65535
   seLinux:
     rule: RunAsAny
   supplementalGroups:
-    rule: RunAsAny
+    ranges:
+    - max: 65535
+      min: 1
+    rule: MustRunAs
   volumes:
-  - secret
   - configMap
   - emptyDir
+  - projected
+  - secret
+  - downwardAPI
+  - persistentVolumeClaim
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: psp:{{ include "istio-operator.fullname" . }}-basic
+  name: psp:{{ include "istio-operator.fullname" . }}-restricted
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -39,7 +58,7 @@ rules:
 - apiGroups:
   - policy
   resourceNames:
-  - {{ include "istio-operator.fullname" . }}-basic
+  - {{ include "istio-operator.fullname" . }}-restricted
   resources:
   - podsecuritypolicies
   verbs:
@@ -48,7 +67,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: psp:{{ include "istio-operator.fullname" . }}-basic
+  name: psp:{{ include "istio-operator.fullname" . }}-restricted
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -59,14 +78,8 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: psp:{{ include "istio-operator.fullname" . }}-basic
+  name: psp:{{ include "istio-operator.fullname" . }}-restricted
 subjects:
-  - kind: ServiceAccount
-    name: istio-citadel-service-account
-    namespace: {{ .Release.Namespace }}
-  - kind: ServiceAccount
-    name: istio-galley-service-account
-    namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
     name: istio-egressgateway-service-account
     namespace: {{ .Release.Namespace }}
@@ -80,16 +93,13 @@ subjects:
     name: istio-operator-authproxy
     namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
-    name: istio-pilot-service-account
+    name: istiod-service-account
     namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
     name: istio-sidecar-injector-service-account
     namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
     name: istiocoredns-service-account
-    namespace: {{ .Release.Namespace }}
-  - kind: ServiceAccount
-    name: istio-nodeagent-service-account
     namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
     name: istio-operator-operator
