--- a/deploy/charts/istio-operator/templates/operator-statefulset.yaml
+++ b/deploy/charts/istio-operator/templates/operator-statefulset.yaml
@@ -33,6 +33,8 @@ spec:
       {{- if .Values.rbac.enabled }}
       serviceAccountName: {{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}
       {{- end }}
+      securityContext:
+        fsGroup: 1337
       terminationGracePeriodSeconds: 60
       containers:
       {{- if and .Values.prometheusMetrics.enabled .Values.prometheusMetrics.authProxy.enabled }}
@@ -75,6 +77,13 @@ spec:
         resources:
 {{ toYaml .Values.operator.resources | indent 10 }}
     {{- with .Values.nodeSelector }}
+        securityContext:
+          runAsUser: 1337
+          runAsGroup: 1337
+          runAsNonRoot: true
+          capabilities:
+            drop:
+            - ALL
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
