update crds in chart

--- a/deploy/charts/istio-operator/templates/meshgateway-crd-1.6.yaml
+++ b/deploy/charts/istio-operator/templates/meshgateway-crd-1.6.yaml
@@ -141,6 +141,8 @@ spec:
                 resources:
                   type: object
               type: object
+            securityContext:
+              type: object
             serviceAnnotations:
               type: object
             serviceLabels:
