--- a/deploy/charts/istio-operator/templates/operator-istio-1.6-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.6-crd.yaml
@@ -146,6 +146,8 @@ spec:
                 sdsEnabled:
                   description: Whether SDS is enabled.
                   type: boolean
+                securityContext:
+                  type: object
                 tolerations:
                   items:
                     type: object
@@ -221,6 +223,8 @@ spec:
                   minimum: 0
                   type: integer
                 resources:
+                  type: object
+                securityContext:
                   type: object
                 tolerations:
                   items:
@@ -316,6 +320,8 @@ spec:
                           type: string
                         resources:
                           type: object
+                      type: object
+                    securityContext:
                       type: object
                     serviceAnnotations:
                       type: object
@@ -421,6 +427,8 @@ spec:
                         resources:
                           type: object
                       type: object
+                    securityContext:
+                      type: object
                     serviceAnnotations:
                       type: object
                     serviceLabels:
@@ -469,6 +477,8 @@ spec:
                   minimum: 0
                   type: integer
                 resources:
+                  type: object
+                securityContext:
                   type: object
                 tolerations:
                   items:
@@ -622,6 +632,8 @@ spec:
                   type: string
                 resources:
                   type: object
+                securityContext:
+                  type: object
                 sessionAffinityEnabled:
                   description: Set whether to create a STRICT_DNS type cluster for
                     istio-telemetry.
@@ -675,6 +687,8 @@ spec:
                 podAnnotations:
                   type: object
                 resources:
+                  type: object
+                securityContext:
                   type: object
                 tolerations:
                   items:
@@ -747,6 +761,8 @@ spec:
                   type: integer
                 resources:
                   type: object
+                securityContext:
+                  type: object
                 sidecar:
                   type: boolean
                 tolerations:
@@ -791,6 +807,8 @@ spec:
                   minimum: 0
                   type: integer
                 resources:
+                  type: object
+                securityContext:
                   type: object
                 tolerations:
                   items:
@@ -972,6 +990,8 @@ spec:
                   type: string
                 resources:
                   type: object
+                securityContext:
+                  type: object
                 useMetadataExchangeFilter:
                   type: boolean
               type: object
@@ -1149,6 +1169,8 @@ spec:
                     liveness health check to redirect request to sidecar. This makes
                     liveness check work even when mTLS is enabled.
                   type: boolean
+                securityContext:
+                  type: object
                 tolerations:
                   items:
                     type: object
@@ -1199,6 +1221,8 @@ spec:
                     be batched before being sent to the mixer server
                   type: string
                 resources:
+                  type: object
+                securityContext:
                   type: object
                 sessionAffinityEnabled:
                   description: Set whether to create a STRICT_DNS type cluster for
