--- a/deploy/charts/istio-operator/templates/operator-remoteistio-1.6-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-remoteistio-1.6-crd.yaml
@@ -117,6 +117,8 @@ spec:
                 sdsEnabled:
                   description: Whether SDS is enabled.
                   type: boolean
+                securityContext:
+                  type: object
                 tolerations:
                   items:
                     type: object
@@ -324,6 +326,8 @@ spec:
                   type: string
                 resources:
                   type: object
+                securityContext:
+                  type: object
                 useMetadataExchangeFilter:
                   type: boolean
               type: object
@@ -471,6 +475,8 @@ spec:
                     liveness health check to redirect request to sidecar. This makes
                     liveness check work even when mTLS is enabled.
                   type: boolean
+                securityContext:
+                  type: object
                 tolerations:
                   items:
                     type: object
