--- a/config/samples/istio_v1beta1_istio_cni.yaml
+++ b/config/samples/istio_v1beta1_istio_cni.yaml
@@ -10,6 +10,9 @@ spec:
     mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
   - "default"
+  gateways:
+    ingress:
+      runAsRoot: false
   sidecarInjector:
     initCNIConfiguration:
       enabled: true
